2007-08-29  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg-save.[ch]
	* plug-ins/jpeg/jpeg.c: change the behavior of the code so that
	"Use quality settings from original image" does what it claims,
	even if these settings are worse than the user's defaults (note
	that the option is not automatically enabled in this case).  Also
	set the subsampling type when that box is checked.

	* plug-ins/jpeg/jpeg-settings.h: formatting.

2007-08-29  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/pcx.c: applied modified patch from Nils
	Philippsen that uses the glib endianness conversion macros instead
	of the ones provided in the old code (broken on S390/S390x).
	Fixes bug #471189.

2007-08-29  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/lcms.c (lcms_image_apply_profile):
	gimp-selection-* procedures operate on the image_ID, not on the
	selection drawable_ID itself. Fixes bug #470589. Also remove the
	saved selection channel after reloading it.

2007-08-29  Michael Natterer  <mitch@gimp.org>

	* themes/Default/images/preferences/Makefile.am (PREFS_IMAGES):
	install and distribute the new icons. Fixes bug #436815

2007-08-28  Jakub Steiner <jimmac@ximian.com>

	* themes/Default/images/preferences/folder-palettes-{16,22}*:
	* themes/Default/images/preferences/folder-themes-{16,22}*:
	missing sizes. Addresses bug #436815

2007-08-28  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpdatafiles.c (gimp_datafiles_read_directories):
	skip files starting with '.' so we don't try to parse .DS_Store
	and other metadata storage files. Also moved variables to local
	scopes.

2007-08-28  Tor Lillqvist  <tml@novell.com>

	* libgimpbase/gimpenv.c: Update doc comments about filename
	encoding on Windows. It is now always UTF-8, like in
	GLib. (#471033) Change "Win32" to "Windows" in doc comments.

2007-08-28  Jakub Friedl  <jfriedl@suse.cz>

	* plug-ins/common/redeye.c: CLAMP()ing the red value
	so that it is in the 0-255 range. Fixes bug #470914.
